# TinyUrl

./: .env  Cargo.toml  diesel.toml
migrations/2025-04-04-135516_url_map/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
