[package]
name = "tinyurl-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ferris-says = "0.3.1"
actix-web = "4"
rand = "0.9.0"
diesel = { version = "2.2.0", features = ["mysql"] }
# build libmysqlclient as part of the build process
# uncomment this line if you run into setup issues
# mysqlclient-sys = { version = "0.4", features = ["bundled"] }
dotenvy = "0.15"