[package]
name = "tinyurl-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ferris-says = "0.3.1"
actix-web = "4"
rand = "0.9.0"
diesel = { version = "2.2.0", features = ["postgres"] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] } 
dotenvy = "0.15"